2005-09-28  Ross Burton  <ross@burtonini.com>

	* src/parser.c:
	* src/devilspie.c:
	Append new expressions, not prepend.  This way there is some
	pretence of user configuration overriding the system.

2005-09-27  Ross Burton  <ross@burtonini.com>

	* NEWS:
	Version 0.13.

2005-09-27  Ross Burton  <ross@burtonini.com>

	* devilspie.spec.in:
	Update for 0.13, from Lars Damerow <lars@pixar.com>.

2005-09-27  Ross Burton  <ross@burtonini.com>

	* configure.in:
	* tests/Makefile.am:
	* tests/*.ds:
	Add test files.

	* src/Makefile.am:
	* src/sexp-test.c:
	Add test framework.

2005-09-27  Ross Burton  <ross@burtonini.com>

	* src/parser.h:
	* src/parser.c:
	* src/devilspie.c:
	Make load_configuration_file() return an ESExp, instead of adding
	it to the list itself.
	
2005-09-27  Ross Burton  <ross@burtonini.com>

	* */*:
	Utter, complete, and total rewrite from scratch. XML is dead, long
	live s-expressions with logical operations! This rewrite was
	sponsored by Lars Damerow <lars@pixar.com>.

2005-09-26  Ross Burton  <ross@burtonini.com>

	* src/Makefile.am:
	* src/devilspie.c:
	Re-arrange defines, rename LOCALEDIR.

2005-09-26  Ross Burton  <ross@burtonini.com>

	* src/devilspie.c:
	Don't start if no configuration was loaded.

2005-09-26  Ross Burton  <ross@burtonini.com>

	* src/doc-generator.c:
	Cast strings to xmlChar*.

2005-09-24  Ross Burton  <ross@burtonini.com>

	* configure.in:
	* src/config-parser.c:
	* src/devilspie.c:
	Use GOption rather than popt.

2005-09-24  Ross Burton  <ross@burtonini.com>

	* src/config-parser.c:
	* src/config-parser.h:
	* src/devilspie-action-debug.gob:
	* src/devilspie-action-decorate.gob:
	* src/devilspie-action-exec.gob:
	* src/devilspie-action-hide.gob:
	* src/devilspie-action-layer.gob:
	* src/devilspie-action-opacity.gob:
	* src/devilspie-action-resize.gob:
	* src/devilspie-action-savegeometry.gob:
	* src/devilspie-action-setgeometry.gob:
	* src/devilspie-action-setwintype.gob:
	* src/devilspie-action-setworkspace.gob: